@@ -1,3 +1,8 @@
+BOARD18 2.5.11 Release Notes
+ 
+Changes from 2.5.10 Release:
+Implemented fix for Issue 121 - Add a search feature to "View all games" page. 
+
 BOARD18 2.5.10 Release Notes
  
 Changes from 2.5.9 Release:
